# yolov8-service

./: Dockerfile  development.Dockerfile  pyproject.toml  requirements-all.txt  requirements.txt
.github/workflows/: workflow.yml
kubernetes/: ingress.yml
src/: main.py  my_service.py
