[project]
name = "yolov8"
version = "1.0.0"

requires-python = ">=3.10"
dependencies = [
    "common-code[test] @ git+https://github.com/swiss-ai-center/common-code.git@main",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "py-cpuinfo>=9.0.0",
    "ultralytics>=8.4.23",
]
[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
